--- a/Bloggers/content/style.css
+++ b/Bloggers/content/style.css
@@ -49,6 +49,34 @@ body {
 .material-icons{
     display: inline !important;
 }
+ .overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #008CBA;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+  padding-left: 2em;
+}
+.overlay a{
+    text-decoration:underline ;
+    color:white;
+}
+ .card:hover .overlay {
+  height: 100%;
+  cursor:pointer;
+}
+.dashboard img{
+  display: block;
+  width: 100%;
+  height: auto;
+  width:100%;
+    /*width: 208px;*/
+    height:198px;
+}
 #map{
     height: 767px;
     position: relative;
