Like , Dislike for Comments in detail view added

--- a/Bloggers/content/style.css
+++ b/Bloggers/content/style.css
@@ -77,6 +77,9 @@ body {
     /*width: 208px;*/
     height:198px;
 }
+i .right{
+    float: right;
+}
 #map{
     height: 767px;
     position: relative;
