--- a/content/style.css
+++ b/content/style.css
@@ -3,103 +3,116 @@
 }
 
 html {
+    height: 100%;
     font-size: 100%;
-    overflow: hidden;
+  overflow:hidden;
     font-family: 'Cairo', sans-serif !important;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
 }
 
 body {
+    height: 100%;
     margin: 0;
     font-size: 13px;
     line-height: 1.231;
+    overflow:auto;
     background-image: url('Images/bgg.png');
     background-repeat: repeat;
 }
-
-.container {
-    height: 500px;
-    overflow: auto;
+.row {
+    position: relative;
 }
-
-.card {
-    background: rgb(49, 100, 136);
+.scroll-container {
+    position: absolute;
+    width: 70%;
+    height: 70%;
+    margin: auto;
+    left: 0;
+    right: 0;
+    overflow: auto;
+    padding: 0;
+}
+.scroll-element {
+    position: absolute;
+    width: 100%;
+    height: auto;
+}
+.spinner{
+    width:100% !important;
+    height: 100% !important;
+    pointer-events: none;
+    position: absolute;
+    background: #dadada;
+    opacity: 0.5; 
+}
+.card{
+ background: rgb(49, 100, 136);
     color: white;
 }
-
-.title {
-    background: rgba(0, 0, 0, 0.25);
+.title{
+    background: rgba(0,0,0,0.25);
     padding: 1em;
     text-align: center;
     margin-bottom: 1em;
 }
-
-.desc {
+.desc{
     font-weight: bold;
-}
+  
 
-.comment-block {
+}
+.comment-block{
     margin-top: 2em;
     padding: 2em;
 }
-
-.nav-wrapper div {
+.nav-wrapper div{
     text-align: center;
     margin: 0;
 }
-
-.nav-wrapper div span {
-    font-size: 3em;
+.nav-wrapper div span{
+  font-size: 3em;
 }
-
-.material-icons {
+.material-icons{
     display: inline !important;
 }
-
-.overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #008CBA;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: .5s ease;
-    padding-left: 2em;
+ .overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #008CBA;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+  padding-left: 2em;
 }
-
-.overlay a {
-    text-decoration: underline;
-    color: white;
+.overlay a{
+    text-decoration:underline ;
+    color:white;
 }
-
-.card:hover .overlay {
-    height: 100%;
-    cursor: pointer;
+ .card:hover .overlay {
+  height: 100%;
+  cursor:pointer;
 }
-
-.dashboard img {
-    display: block;
-    width: 100%;
-    height: auto;
-    width: 100%;
+.dashboard img{
+  display: block;
+  width: 100%;
+  height: auto;
+  width:100%;
     /*width: 208px;*/
-    height: 198px;
+    height:198px;
 }
-
-i .right {
+i .right{
     float: right;
 }
-
-#map {
+#map{
     height: 767px;
     position: relative;
+  
     overflow: hidden;
     width: 98.5%;
 }
-
 input[type="radio"]+label {
     padding-left: 25px;
     padding-right: 18px;
@@ -314,8 +327,8 @@ header {
     z-index: 10000;
     padding: 10px;
     color: rgba(255, 255, 255, 0.76);
-    height: 100%;
-    overflow-y: auto;
+    height:100%;
+    overflow-y:auto;
 }
 
 .onepush-desc {
@@ -339,7 +352,7 @@ header {
 }
 
 .portfolios-scroll {
-    width: 100%;
+       width: 100%;
     padding: 0px 15px 0px 0px;
     height: 887px;
     overflow-y: auto;
@@ -370,7 +383,7 @@ header {
 .portfolio-item.list {
     width: 100%;
     margin: 15px 0px;
-    padding: 0px;
+    padding:0px;
 }
 
 .portfolio-item.grid {
@@ -528,6 +541,7 @@ header {
 
 ::-webkit-scrollbar {
     width: 13px;
+
 }
 
 ::-webkit-scrollbar-track {
